# lucrax.ai

./: .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASH_MIGRATION.md  Dockerfile  EXEMPLO_URL_GOOGLE_SHEETS.md  LICENSE  MELHORIAS_IMPLEMENTADAS.md  PROJECT_RULES.md  PROJECT_STATUS.md  README.md  README_VERCEL.md  SUPABASE_INTEGRATION.md  VERCEL_DEPLOYMENT.md  VERCEL_SETUP_INSTRUCTIONS.md  app.py  app_dash.py  app_dash_advanced.py  app_improved.py  app_professional.py  audio_handler.py  config.py  config_example.env  create_datagpt_tables.sql  dataGPT.spec  deploy-vercel.ps1  deploy-vercel.sh  env.example  index.html  neural_network_analyzer.py  neural_network_config.py  openai_analyzer.py  package-lock.json  package.json  pyproject.toml  requirements-vercel.txt  requirements.txt  requirements_dash.txt  (+10 more)
.cursor/: development-environment  production-environment
.cursor/rules/: README  changelog-rules  code-standards  deployment-rules  rule-creation-guidelines  rules  supabase-rules
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
api/: dash.py  dash_simple.py  index.py  index_simple.py
api/heygen/: proxy.js
api/openai/: vectorstore.js  (+1 more)
migrations/: fix_clients_foreign_key.sql
src/: App.jsx  api_client.py  chart_generator.py  data_loader.py  env.d.ts  index.css  openai_client.py  plotter.py  supabase_client.py  validators.py
tests/: test_app.py  test_data_loader.py  test_improved_app.py  test_neural_network_analyzer.py  test_openai_analyzer.py
(+35 files in other folders)
