[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagpt"
version = "2.6.0"
description = "dataGPT v2.6 - Aplicação de visualização e análise de dados com IA"
authors = [
    {name = "Mario Mayerle Filho", email = "mario@datagpt.com.br"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0",
    "plotly>=5.15.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "pillow>=9.0.0",
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "streamlit>=1.28.0",
    "flake8>=5.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.html", "*.txt", "*.md"]
